--- a/frontend/index.html
+++ b/frontend/index.html
@@ -119,7 +119,7 @@
 
     <!-- ✅ Chatbot Floating Button -->
     <button id="chatbot-toggle" style="position: fixed; bottom: 20px; right: 20px; background: none; border: none; cursor: pointer;">
-        <img src="images/chatbot-amma.png" alt="Talk with Amma" style="width: 120px; height: auto;">
+        <img src="images/founder.jpg" alt="Talk with Amma" style="width: 120px; height: auto;">
     </button>
 
     <!-- ✅ Chatbot Container (Initially Hidden) -->
