--- a/frontend/index.html
+++ b/frontend/index.html
@@ -117,30 +117,72 @@
         </div>
     </footer>
 
-    <!-- ✅ Chatbot Floating Button -->
-    <button id="chatbot-toggle" style="position: fixed; bottom: 20px; right: 20px; background: none; border: none; cursor: pointer;">
-        <img src="images/founder.jpg" alt="Talk with Amma" style="width: 120px; height: auto;">
-    </button>
+    <!-- ✅ Chatbot Floating Button (Small Round Image + "Talk with Amma" Text) -->
+<button id="chatbot-toggle" style="position: fixed; bottom: 20px; right: 20px; background: none; border: none; cursor: pointer; text-align: center; z-index: 1500;">
+    <div style="display: flex; flex-direction: column; align-items: center;">
+        <img src="images/chatbot-amma.png" alt="Talk with Amma" style="width: 60px; height: 60px; border-radius: 50%; box-shadow: 0px 4px 6px rgba(0,0,0,0.3);">
+        <span style="color: white; font-size: 14px; font-weight: bold; margin-top: 5px;">Talk with Amma</span>
+    </div>
+</button>
 
-    <!-- ✅ Chatbot Container (Initially Hidden) -->
-    <div id="webchat-container" style="display: none; position: fixed; bottom: 80px; right: 20px; width: 350px; height: 500px; background: white; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.2);"></div>
+<!-- ✅ Chatbot Container (Initially Hidden) -->
+<div id="webchat-container" style="display: none; position: fixed; bottom: 80px; right: 20px; width: 350px; height: 500px; background: white; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.2); overflow: hidden; z-index: 1500;"></div>
 
-    <!-- ✅ Chatbot Script -->
-    <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
-    <script>
-    (async function() {
-        const res = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
+<!-- ✅ Chatbot Script -->
+<script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+<script>
+(async function() {
+    try {
+        // ✅ Secure way to generate Direct Line Token
+        const response = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
             method: 'POST',
             headers: {
-                'Authorization': 'Bearer 8wBOgG8xJgSk81WXqYwrNiq3OvDFK34SHkPsjErWZ2ib4vhc3uJ1JQQJ99BBACi5YpzAArohAAABAZBS3KHD.FE9G3z76yOo8cD01bzxHFo8YYAzNFt2GCNvgJFNsGgx8eE0jUGPSJQQJ99BBACi5YpzAArohAAABAZBS3RAU'
+                'Authorization': 'Bearer <!-- ✅ Chatbot Floating Button (Small Round Image + "Talk with Amma" Text) -->
+<button id="chatbot-toggle" style="position: fixed; bottom: 20px; right: 20px; background: none; border: none; cursor: pointer; text-align: center; z-index: 1500;">
+    <div style="display: flex; flex-direction: column; align-items: center;">
+        <img src="images/chatbot-amma.png" alt="Talk with Amma" style="width: 60px; height: 60px; border-radius: 50%; box-shadow: 0px 4px 6px rgba(0,0,0,0.3);">
+        <span style="color: white; font-size: 14px; font-weight: bold; margin-top: 5px;">Talk with Amma</span>
+    </div>
+</button>
+
+<!-- ✅ Chatbot Container (Initially Hidden) -->
+<div id="webchat-container" style="display: none; position: fixed; bottom: 80px; right: 20px; width: 350px; height: 500px; background: white; border-radius: 10px; box-shadow: 0px 0px 10px rgba(0,0,0,0.2); overflow: hidden; z-index: 1500;"></div>
+
+<!-- ✅ Chatbot Script -->
+<script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
+<script>
+(async function() {
+    try {
+        // ✅ Secure way to generate Direct Line Token
+        const response = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
+            method: 'POST',
+            headers: {
+                'Authorization': 'Bearer YOUR_DIRECT_LINE_SECRET' // Replace with your actual secret key
             }
         });
-        const { token } = await res.json();
+
+        if (!response.ok) {
+            throw new Error('Failed to fetch Direct Line token');
+        }
+
+        const { token } = await response.json();
+
+        // ✅ Render the Chatbot UI
         window.WebChat.renderWebChat({
             directLine: window.WebChat.createDirectLine({ token }),
-            userID: 'USER_ID',
-            username: 'User',
-            locale: 'en-US'
+            userID: 'User123', // Can be dynamically set
+            username: 'Guest',
+            locale: 'en-US',
+            styleOptions: {
+                hideUploadButton: true, // Disable file upload
+                botAvatarImage: 'images/bot-avatar.png', // Bot profile image
+                botAvatarInitials: 'AA', // Default initials if image is not found
+                userAvatarImage: 'images/user-avatar.png', // User profile image
+                userAvatarInitials: 'U', // Default initials for user
+                backgroundColor: '#ffffff', // Chat background
+                bubbleBackground: '#f1f1f1', // Chat bubbles
+                bubbleBorderRadius: 10, // Rounded chat bubbles
+            }
         }, document.getElementById('webchat-container'));
 
         // ✅ Toggle Chatbot Visibility
@@ -148,8 +190,52 @@
             let chatbox = document.getElementById("webchat-container");
             chatbox.style.display = (chatbox.style.display === "none" || chatbox.style.display === "") ? "block" : "none";
         });
-    })();
-    </script>
+
+    } catch (error) {
+        console.error("Error loading chatbot:", error);
+    }
+})();
+</script>
+' // Replace with your actual secret key
+            }
+        });
+
+        if (!response.ok) {
+            throw new Error('Failed to fetch Direct Line token');
+        }
+
+        const { token } = await response.json();
+
+        // ✅ Render the Chatbot UI
+        window.WebChat.renderWebChat({
+            directLine: window.WebChat.createDirectLine({ token }),
+            userID: 'User123', // Can be dynamically set
+            username: 'Guest',
+            locale: 'en-US',
+            styleOptions: {
+                hideUploadButton: true, // Disable file upload
+                botAvatarImage: 'images/bot-avatar.png', // Bot profile image
+                botAvatarInitials: 'AA', // Default initials if image is not found
+                userAvatarImage: 'images/user-avatar.png', // User profile image
+                userAvatarInitials: 'U', // Default initials for user
+                backgroundColor: '#ffffff', // Chat background
+                bubbleBackground: '#f1f1f1', // Chat bubbles
+                bubbleBorderRadius: 10, // Rounded chat bubbles
+            }
+        }, document.getElementById('webchat-container'));
+
+        // ✅ Toggle Chatbot Visibility
+        document.getElementById("chatbot-toggle").addEventListener("click", function() {
+            let chatbox = document.getElementById("webchat-container");
+            chatbox.style.display = (chatbox.style.display === "none" || chatbox.style.display === "") ? "block" : "none";
+        });
+
+    } catch (error) {
+        console.error("Error loading chatbot:", error);
+    }
+})();
+</script>
+
 
 
 </body>
