--- a/frontend/index.html
+++ b/frontend/index.html
@@ -123,7 +123,7 @@
     <!-- ✅ Chatbot Floating Button (Small Round Image + "Talk with Amma" Text) -->
 <button id="chatbot-toggle" style="position: fixed; bottom: 20px; right: 20px; background: none; border: none; cursor: pointer; text-align: center; z-index: 1500;">
     <div style="display: flex; flex-direction: column; align-items: center;">
-        <img src="images/founder.jpg" alt="Talk with Amma" style="width: 60px; height: 60px; border-radius: 50%; box-shadow: 0px 4px 6px rgba(0,0,0,0.3);">
+        <img src="images/chatbot-amma.png" alt="Talk with Amma" style="width: 60px; height: 60px; border-radius: 50%; box-shadow: 0px 4px 6px rgba(0,0,0,0.3);">
         <span style="color: white; font-size: 14px; font-weight: bold; margin-top: 5px;">Talk with Amma</span>
     </div>
 </button>
@@ -136,11 +136,11 @@
 <script>
 (async function() {
     try {
-        // ✅ Secure way to generate Direct Line Token
+        // ✅ Securely fetch the Direct Line Token
         const response = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
             method: 'POST',
             headers: {
-                'Authorization': 'Bearer 8wBOgG8xJgSk81WXqYwrNiq3OvDFK34SHkPsjErWZ2ib4vhc3uJ1JQQJ99BBACi5YpzAArohAAABAZBS3KHD' // Replace with your actual secret key
+                'Authorization': 'Bearer YOUR_DIRECT_LINE_SECRET' // Replace with your actual key
             }
         });
 
@@ -153,25 +153,29 @@
         // ✅ Render the Chatbot UI
         window.WebChat.renderWebChat({
             directLine: window.WebChat.createDirectLine({ token }),
-            userID: 'User123', // Can be dynamically set
+            userID: 'User123',
             username: 'Guest',
             locale: 'en-US',
             styleOptions: {
-                hideUploadButton: true, // Disable file upload
-                botAvatarImage: 'images/bot-avatar.png', // Bot profile image
-                botAvatarInitials: 'AA', // Default initials if image is not found
-                userAvatarImage: 'images/user-avatar.png', // User profile image
-                userAvatarInitials: 'U', // Default initials for user
-                backgroundColor: '#ffffff', // Chat background
-                bubbleBackground: '#f1f1f1', // Chat bubbles
-                bubbleBorderRadius: 10, // Rounded chat bubbles
+                hideUploadButton: true,
+                botAvatarImage: 'images/bot-avatar.png',
+                botAvatarInitials: 'AA',
+                userAvatarImage: 'images/user-avatar.png',
+                userAvatarInitials: 'U',
+                backgroundColor: '#ffffff',
+                bubbleBackground: '#f1f1f1',
+                bubbleBorderRadius: 10,
             }
         }, document.getElementById('webchat-container'));
 
-        // ✅ Toggle Chatbot Visibility
+        // ✅ Fix: Ensure Chatbot Opens When Clicking the Button
         document.getElementById("chatbot-toggle").addEventListener("click", function() {
             let chatbox = document.getElementById("webchat-container");
-            chatbox.style.display = (chatbox.style.display === "none" || chatbox.style.display === "") ? "block" : "none";
+            if (chatbox.style.display === "none" || chatbox.style.display === "") {
+                chatbox.style.display = "block";
+            } else {
+                chatbox.style.display = "none";
+            }
         });
 
     } catch (error) {
@@ -179,7 +183,6 @@
     }
 })();
 </script>
-
 
 
 
