--- a/frontend/index.html
+++ b/frontend/index.html
@@ -121,7 +121,7 @@
         try {
             const response = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
                 method: 'POST',
-                headers: { 'Authorization': 'Bearer YOUR_DIRECT_LINE_SECRET' } // Replace with your actual key
+                headers: { 'Authorization': 'Bearer 8wBOgG8xJgSk81WXqYwrNiq3OvDFK34SHkPsjErWZ2ib4vhc3uJ1JQQJ99BBACi5YpzAArohAAABAZBS3KHD.FE9G3z76yOo8cD01bzxHFo8YYAzNFt2GCNvgJFNsGgx8eE0jUGPSJQQJ99BBACi5YpzAArohAAABAZBS3RAU' } // Replace with your actual key
             });
 
             if (!response.ok) throw new Error('Failed to fetch Direct Line token');
