--- a/frontend/index.html
+++ b/frontend/index.html
@@ -103,7 +103,7 @@
         </div>
     </footer>
 
-    <!-- ✅ Chatbot Floating Button -->
+    <!-- ✅ Chatbot Floating Button (Small Round Image + "Talk with Amma" Text) -->
     <button id="chatbot-toggle" class="chatbot-button">
         <div class="chatbot-wrapper">
             <img src="images/chatbot-amma.png" alt="Talk with Amma">
@@ -121,7 +121,7 @@
         try {
             const response = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
                 method: 'POST',
-                headers: { 'Authorization': 'Bearer 8wBOgG8xJgSk81WXqYwrNiq3OvDFK34SHkPsjErWZ2ib4vhc3uJ1JQQJ99BBACi5YpzAArohAAABAZBS3KHD.FE9G3z76yOo8cD01bzxHFo8YYAzNFt2GCNvgJFNsGgx8eE0jUGPSJQQJ99BBACi5YpzAArohAAABAZBS3RAU' } // Replace with your actual key
+                headers: { 'Authorization': 'Bearer 8wBOgG8xJgSk81WXqYwrNiq3OvDFK34SHkPsjErWZ2ib4vhc3uJ1JQQJ99BBACi5YpzAArohAAABAZBS3KHD.FE9G3z76yOo8cD01bzxHFo8YYAzNFt2GCNvgJFNsGgx8eE0jUGPSJQQJ99BBACi5YpzAArohAAABAZBS3RAU' } // 🔹 Replace with actual key
             });
 
             if (!response.ok) throw new Error('Failed to fetch Direct Line token');
@@ -135,8 +135,8 @@
                 locale: 'en-US',
                 styleOptions: {
                     hideUploadButton: true,
-                    botAvatarImage: 'images/founder.jpg',
-                    userAvatarImage: 'images/founder.jpg',
+                    botAvatarImage: 'images/bot-avatar.png',
+                    userAvatarImage: 'images/user-avatar.png',
                     backgroundColor: '#ffffff',
                     bubbleBackground: '#f1f1f1',
                     bubbleBorderRadius: 10,
