--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,7 @@
             <div class="logo">
                 <img src="images/logo.webp" alt="HSPH Logo">
             </div>
-            <nav class="desktop-nav">
+            <nav class="desktop-nav"> 
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -106,7 +106,7 @@
     <!-- ✅ Chatbot Floating Button (Small Round Image + "Talk with Amma" Text) -->
     <button id="chatbot-toggle" class="chatbot-button">
         <div class="chatbot-wrapper">
-            <img src="images/chatbot-amma.png" alt="Talk with Amma">
+            <img src="images/founder.jpg" alt="Talk with Amma">
             <span>Talk with Amma</span>
         </div>
     </button>
