--- a/frontend/index.html
+++ b/frontend/index.html
@@ -25,7 +25,8 @@
             <div class="logo">
                 <img src="images/logo.webp" alt="HSPH Logo">
             </div>
-            <nav class="desktop-nav"> 
+            <button id="menuButton" class="mobile-menu-button">☰</button>
+            <nav class="desktop-nav">
                 <ul class="nav-links">
                     <li><a href="index.html">Home</a></li>
                     <li><a href="about.html">About</a></li>
@@ -38,8 +39,21 @@
                     <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
                 </ul>
             </nav>
-            <button id="menuButton" class="mobile-menu-button">☰</button>
         </div>
+        <!-- ✅ Mobile Navigation -->
+        <nav id="mobileNav" class="mobile-nav">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="sermons.html">Sermons</a></li>
+                <li><a href="ministries.html">Ministries</a></li>
+                <li><a href="orphanage.html">Orphanage</a></li>
+                <li><a href="events.html">Events</a></li>
+                <li><a href="contact.html">Contact</a></li>
+                <li><a href="volunteer.html">Get Involved</a></li>
+                <li><a href="donate.html" class="donate-btn">Donate Now</a></li>
+            </ul>
+        </nav>
     </header>
 
     <!-- ✅ Hero Section -->
@@ -71,42 +85,10 @@
         </div>
     </section>
 
-    <!-- ✅ Founder Section -->
-    <section class="founder-section">
-        <div class="founder-container">
-            <div class="founder-image">
-                <img src="images/founder.jpg" alt="Founder">
-            </div>
-            <div class="founder-content">
-                <h2>Founder</h2>
-                <h3>Rev. P. Moses</h3>
-                <p>Pastor P. Moses is the visionary behind the Holy Spirit Prayer House, dedicated to spreading faith, love, and hope to communities worldwide.</p>
-            </div>
-        </div>
-    </section>
-
-    <!-- ✅ Footer -->
-    <footer>
-        <div class="footer-container">
-            <p>&copy; 2025 HOLY SPIRIT PRAYER HOUSE | All Rights Reserved</p>
-            <div class="social-icons">
-                <a href="https://www.youtube.com/@pastorpmoses" target="_blank">
-                    <img src="images/youtube.png" alt="YouTube">
-                </a>
-                <a href="https://www.instagram.com/hsph_oduru/" target="_blank">
-                    <img src="images/instagram.png" alt="Instagram">
-                </a>
-                <a href="https://www.facebook.com/holy.jesus132" target="_blank">
-                    <img src="images/facebook.png" alt="Facebook">
-                </a>
-            </div>
-        </div>
-    </footer>
-
-    <!-- ✅ Chatbot Floating Button (Small Round Image + "Talk with Amma" Text) -->
+    <!-- ✅ Chatbot Floating Button -->
     <button id="chatbot-toggle" class="chatbot-button">
         <div class="chatbot-wrapper">
-            <img src="images/founder.jpg" alt="Talk with Amma">
+            <img src="images/chatbot-amma.png" alt="Talk with Amma">
             <span>Talk with Amma</span>
         </div>
     </button>
@@ -116,43 +98,8 @@
 
     <!-- ✅ Chatbot Script -->
     <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
-    <script>
-    (async function() {
-        try {
-            const response = await fetch('https://directline.botframework.com/v3/directline/tokens/generate', {
-                method: 'POST',
-                headers: { 'Authorization': 'Bearer 8wBOgG8xJgSk81WXqYwrNiq3OvDFK34SHkPsjErWZ2ib4vhc3uJ1JQQJ99BBACi5YpzAArohAAABAZBS3KHD.FE9G3z76yOo8cD01bzxHFo8YYAzNFt2GCNvgJFNsGgx8eE0jUGPSJQQJ99BBACi5YpzAArohAAABAZBS3RAU' } // 🔹 Replace with actual key
-            });
-
-            if (!response.ok) throw new Error('Failed to fetch Direct Line token');
-
-            const { token } = await response.json();
-
-            window.WebChat.renderWebChat({
-                directLine: window.WebChat.createDirectLine({ token }),
-                userID: 'User123',
-                username: 'Guest',
-                locale: 'en-US',
-                styleOptions: {
-                    hideUploadButton: true,
-                    botAvatarImage: 'images/bot-avatar.png',
-                    userAvatarImage: 'images/user-avatar.png',
-                    backgroundColor: '#ffffff',
-                    bubbleBackground: '#f1f1f1',
-                    bubbleBorderRadius: 10,
-                }
-            }, document.getElementById('webchat-container'));
-
-            document.getElementById("chatbot-toggle").addEventListener("click", function() {
-                let chatbox = document.getElementById("webchat-container");
-                chatbox.style.display = (chatbox.style.display === "none" || chatbox.style.display === "") ? "block" : "none";
-            });
-
-        } catch (error) {
-            console.error("Error loading chatbot:", error);
-        }
-    })();
-    </script>
+    <script src="js/chatbot.js"></script>
+    <script src="js/script.js"></script>
 
 </body>
 </html>
