--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,6 +16,7 @@
     <!-- ✅ Styles -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="js/script.js" defer></script>
+    <script src="js/chatbot.js" defer></script>
 </head>
 <body>
 
