--- a/frontend/index.html
+++ b/frontend/index.html
@@ -89,7 +89,7 @@
     <!-- ✅ Chatbot Floating Button -->
     <button id="chatbot-toggle" class="chatbot-button">
         <div class="chatbot-wrapper">
-            <img src="images/chatbot-amma.png" alt="Talk with Amma">
+            <img src="images/founder.jpg" alt="Talk with Amma">
             <span>Talk with Amma</span>
         </div>
     </button>
