--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,8 +15,6 @@
     
     <!-- ✅ Styles -->
     <link rel="stylesheet" href="css/styles.css">
-    <script src="js/script.js" defer></script>
-    <script src="js/chatbot.js" defer></script>
 </head>
 <body>
 
@@ -41,6 +39,7 @@
                 </ul>
             </nav>
         </div>
+        
         <!-- ✅ Mobile Navigation -->
         <nav id="mobileNav" class="mobile-nav">
             <ul>
@@ -97,10 +96,10 @@
     <!-- ✅ Chatbot Container -->
     <div id="webchat-container"></div>
 
-    <!-- ✅ Chatbot Script -->
+    <!-- ✅ JavaScript Files -->
     <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
-    <script src="js/chatbot.js"></script>
-    <script src="js/script.js"></script>
+    <script src="js/chatbot.js" defer></script>
+    <script src="js/script.js" defer></script>
 
 </body>
 </html>
