--- a/frontend/index.html
+++ b/frontend/index.html
@@ -88,13 +88,13 @@
     <!-- ✅ Chatbot Floating Button -->
     <button id="chatbot-toggle" class="chatbot-button">
         <div class="chatbot-wrapper">
-            <img src="images/founder.jpg" alt="Talk with Amma">
+            <img src="images/chatbot-amma.png" alt="Talk with Amma">
             <span>Talk with Amma</span>
         </div>
     </button>
 
     <!-- ✅ Chatbot Container -->
-    <div id="webchat-container"></div>
+    <div id="webchat-container" style="display: none;"></div>
 
     <!-- ✅ JavaScript Files -->
     <script src="https://cdn.botframework.com/botframework-webchat/latest/webchat.js"></script>
