Updated Founder & Co-Founder section layout

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,6 +15,7 @@
 
     <!-- ✅ Stylesheets -->
     <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="css/founder.css">
     <link rel="stylesheet" href="css/chatbot.css">
 
 </head>
@@ -85,16 +86,24 @@
         </div>
     </section>
 
-    <!-- ✅ Founder Section -->
-    <section class="founder-section">
+    <section class="founders-section">
         <div class="founder-container">
-            <img src="images/founder.jpg" alt="Founder Image" class="founder-img">
-            <div class="founder-content">
-                <h2>Our Founder</h2>
-                <p>Pastor P. Moses, the founder of Holy Spirit Prayer House, has dedicated his life to spreading the Gospel and helping those in need.</p>
+            <!-- Founder -->
+            <div class="founder">
+                <img src="images/founder.jpg" alt="Founder Image" class="founder-img">
+                <h2>Founder</h2>
+                <h3>Pastor P. Moses</h3>
+            </div>
+    
+            <!-- Co-Founder -->
+            <div class="co-founder">
+                <img src="images/co-founder.jpg" alt="Co-Founder Image" class="founder-img">
+                <h2>Co-Founder</h2>
+                <h3>Bro. Billygraham Moses</h3>
             </div>
         </div>
     </section>
+    
 
     <!-- ✅ Floating Chatbot Button -->
     <button id="chatbot-toggle" class="chatbot-button" aria-label="Open Chatbot">
